hphp/hack/test/typecheck/construct/lateinit/lateinit6.php.exp
File "lateinit6.php", line 7, characters 13-13:
Class D does not initialize all of its members; foo is not always initialized.
Make sure you systematically set $this->foo when the method __construct is called.
Alternatively, you can define the member as optional (?...)
 (NastCheck[3015])
File "lateinit6.php", line 7, characters 13-13:
Class D does not correctly implement all required members  (Typing[4282])
  File "lateinit6.php", line 7, characters 23-23:
  Some members are incompatible with those declared in type C
Read the following to see why:
  File "lateinit6.php", line 9, characters 10-12:
  Redeclared properties must be consistently declared as late-initialized
  File "lateinit6.php", line 4, characters 10-12:
  The property is not late-initialized here
